# BWINF

./: .gitignore
src/: Cargo.toml
src/Aufgabe1/: Cargo.toml  buch.txt
src/Aufgabe1/src/: main.rs
src/Aufgabe2/: Cargo.toml
src/Aufgabe2/src/: main.rs
src/Aufgabe3/: Cargo.toml
src/Aufgabe3/examples/: sudoku5.txt
src/Aufgabe3/src/: bench.rs  main.rs
src/Aufgabe3/src/sudoku/: bruteforce.rs  mod.rs  parse.rs  pattern.rs  pattern_finder.rs  permutations.rs  rotate.rs  smart_find.rs  sudoku.rs
src/Aufgabe4/: Cargo.toml
src/Aufgabe4/examples/: fahrradwerkstatt3.txt
src/Aufgabe4/src/: main.rs
src/Aufgabe5/: Cargo.toml
src/Aufgabe5/examples/: huepfburg4.txt
src/Aufgabe5/src/: main.rs
src/shared/: Cargo.toml
src/shared/src/: file_picker.rs  lib.rs
